--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,7 +4,7 @@
 {% endunless %}
 
 
-<input type="checkbox" id="menu_switch">
+<input type="checkbox" id="menu_switch" />
 <label for="menu_switch"><span class="nav_item symbol" id="menu_button">&#xf419;</span></label>
 
 <div id="menu">
@@ -35,7 +35,7 @@
 
 
 <!-- settings menu -->
-<input type="checkbox" id="settings_switch">
+<input type="checkbox" id="settings_switch" />
 <label for="settings_switch"><span class="nav_item right symbol">&#xf445;</span></label>
 <div id="settings_menu">	
 	<a href="{{ de_url }}"><span class="nav_item">deutsch</span></a>
