--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 <html lang="{{ locale }}">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
   <title>
     {{ site.name }}{% if page.title %}&nbsp;||&nbsp;{% if page.type == nil %}{{ site.data.i18n[locale].type_article }}&nbsp;{% endif %}{{ page.title }}{% endif %}
   </title>
@@ -36,12 +36,15 @@
     }
   
     window.onload = function() {
+      var tag = document.getElementById("noscript");
+      tag.style.display = "none";
+
       var hide = false;
       if (window.name == "true") {
         hide = true;
       }
 
-      var tag = document.getElementById("header_switch");
+      tag = document.getElementById("header_switch");
       if (hide == true) {
         tag.checked = true;
       }
@@ -56,14 +59,8 @@
 </head>
 
 <body> 
-
-  <!--[if lt IE 9]>
-  <div class="deprecated_browser">
-    Achtung: Sie benutzen eine veraltete Version des Internet Explorer.<br/>Die Seite wird mit hoher Wahrscheinlichkeit nicht fehlerfrei dargestellt!  
-  </div>  
-  <![endif]-->  
   
-  <a class="anchor" name="top"></a>
+  <a class="anchor" id="top"></a>
   <input type="checkbox" id="header_switch" onclick="hide_settings()" />
   <header>       
     {% include header.html %}
