box shadows removed, small improvements in popup menus

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -16,10 +16,10 @@
 */
 
 $colBackground: ivory;
+$colBackgroundTransparent: rgba(255, 255, 240, 0.75);
 $colLight: #d6dbd6; //#dde1e6; //#c9d9e8;
 $colMiddle: #789; //#789;
 $colDark: black; //#3e3e3b; //#60605a;
-$colDarkTransparent: rgba(0, 0, 0, 0.5);
 $colTextLight: white;
 $colTextDark: black;
 
