new font open sans, added NoScript addon warning in main page

--- a/css/_classes.scss
+++ b/css/_classes.scss
@@ -73,7 +73,7 @@
 .symbol {            
     font-family: Genericons;
     padding-right: 0.5em;
-    vertical-align: bottom;
+    vertical-align: middle;
 }
 
 .white_link {
