--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -28,5 +28,6 @@ $colTextDark: black;
 	other variables
 */
 
-$fontName: "fInconsolata";
+$fontName: "Open Sans"; 
+//$fontName: "Inconsolata";
 $logoHeight: 20%;
