--- a/css/_font.scss
+++ b/css/_font.scss
@@ -22,7 +22,7 @@
 
 // Inconsolata
 @font-face {
-    font-family: "fInconsolata";
+    font-family: "Inconsolata";
     src: url("../media/font/inconsolata-regular.eot");
     src: url("../media/font/inconsolata-regular.eot?#iefix") format('embedded-opentype'),
          url("../media/font/inconsolata-regular.woff") format('woff'),
@@ -33,12 +33,36 @@
 }
 
 @font-face {
-    font-family: "fInconsolata";
+    font-family: "Inconsolata";
     src: url("../media/font/inconsolata-bold.eot");
     src: url("../media/font/inconsolata-bold.eot?#iefix") format('embedded-opentype'),
          url("../media/font/inconsolata-bold.woff") format('woff'),
          url("../media/font/inconsolata-bold.ttf") format('truetype'),
          url("../media/font/inconsolata-bold.svg#inconsolatabold") format('svg');
+    font-weight: bold;
+    font-style: normal;
+}
+
+
+// Open Sans
+@font-face {
+    font-family: "Open Sans";
+    src: url("../media/font/opensans-regular.eot");
+    src: url("../media/font/opensans-regular.eot?#iefix") format('embedded-opentype'),
+         url("../media/font/opensans-regular.woff") format('woff'),
+         url("../media/font/opensans-regular.ttf") format('truetype'),
+         url("../media/font/opensans-regular.svg#open_sansregular") format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Open Sans";
+    src: url("../media/font/opensans-bold.eot");
+    src: url("../media/font/opensans-bold.eot?#iefix") format('embedded-opentype'),
+         url("../media/font/opensans-bold.woff") format('woff'),
+         url("../media/font/opensans-bold.ttf") format('truetype'),
+         url("../media/font/opensans-bold.svg#open_sansbold") format('svg');
     font-weight: bold;
     font-style: normal;
 }
