--- a/css/main.css
+++ b/css/main.css
@@ -79,16 +79,30 @@ input, select {
   font-style: normal; }
 
 @font-face {
-  font-family: "fInconsolata";
+  font-family: "Inconsolata";
   src: url("../media/font/inconsolata-regular.eot");
   src: url("../media/font/inconsolata-regular.eot?#iefix") format("embedded-opentype"), url("../media/font/inconsolata-regular.woff") format("woff"), url("../media/font/inconsolata-regular.ttf") format("truetype"), url("../media/font/inconsolata-regular.svg#inconsolataregular") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
-  font-family: "fInconsolata";
+  font-family: "Inconsolata";
   src: url("../media/font/inconsolata-bold.eot");
   src: url("../media/font/inconsolata-bold.eot?#iefix") format("embedded-opentype"), url("../media/font/inconsolata-bold.woff") format("woff"), url("../media/font/inconsolata-bold.ttf") format("truetype"), url("../media/font/inconsolata-bold.svg#inconsolatabold") format("svg");
+  font-weight: bold;
+  font-style: normal; }
+
+@font-face {
+  font-family: "Open Sans";
+  src: url("../media/font/opensans-regular.eot");
+  src: url("../media/font/opensans-regular.eot?#iefix") format("embedded-opentype"), url("../media/font/opensans-regular.woff") format("woff"), url("../media/font/opensans-regular.ttf") format("truetype"), url("../media/font/opensans-regular.svg#open_sansregular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: "Open Sans";
+  src: url("../media/font/opensans-bold.eot");
+  src: url("../media/font/opensans-bold.eot?#iefix") format("embedded-opentype"), url("../media/font/opensans-bold.woff") format("woff"), url("../media/font/opensans-bold.ttf") format("truetype"), url("../media/font/opensans-bold.svg#open_sansbold") format("svg");
   font-weight: bold;
   font-style: normal; }
 
@@ -165,7 +179,7 @@ input, select {
 .symbol {
   font-family: Genericons;
   padding-right: 0.5em;
-  vertical-align: bottom; }
+  vertical-align: middle; }
 
 .white_link {
   border-bottom: 1px dotted white;
@@ -284,7 +298,7 @@ ul.no_bullet {
   -o-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  font-family: "fInconsolata", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: normal;
   word-wrap: break-word; }
 
@@ -294,7 +308,7 @@ body, html {
 body {
   background-color: ivory;
   display: block;
-  font-size: 12pt;
+  font-size: 11pt;
   overflow-y: scroll;
   width: 100%;
   min-width: 300px; }
